# qbt

./: .gitignore  CMakeLists.txt
boson_algebra/: CMakeLists.txt
boson_algebra/include/boson_algebra/: algorithm_dfs.hpp  boson.hpp  boson_algebra.hpp  expression_abstract.hpp  expression_all.hpp  expression_boson_primitive_operators.hpp  expression_common.hpp  expression_pragma.hpp  expression_structural_blocks.hpp  modify_all.hpp  modify_canonical_math.hpp  modify_detect_one_factor.hpp  modify_detect_zero_factor.hpp  modify_detect_zero_product.hpp  modify_flatten_factor.hpp  modify_flatten_numerous_expression.hpp  modify_flatten_product.hpp  modify_flatten_sum.hpp  modify_rebuild_factor_sum_into_sum_factors.hpp  modify_rebuild_prod_factors_into_factor_prod.hpp  modify_rebuild_prod_sum_into_sum_prod.hpp  modify_rebuild_sum_into_linear_combination.hpp  modify_remove_bridge_numerous_expression.hpp  modify_remove_bridge_product.hpp  modify_remove_bridge_sum.hpp  modify_simplify_linear_combination.hpp  modify_sort_product_of_boson_primitive_operators_0.hpp  modify_sort_product_of_boson_primitive_operators_1.hpp  modify_sort_product_of_boson_primitive_operators_2.hpp  modify_substitute_cr_an_with_no.hpp  result.hpp  str_repr.hpp  transform_all.hpp  transform_canonical_math.hpp  transform_detect_bridge_numerous_expression.hpp  transform_detect_bridge_product.hpp  transform_detect_bridge_sum.hpp  transform_detect_one_factor.hpp  transform_detect_zero_factor.hpp  transform_detect_zero_product.hpp  (+20 more)
boson_algebra/src/: algorithm_dfs.cpp  boson.cpp  boson_algebra.cpp  expression_pragma.cpp  modify_canonical_math.cpp  modify_detect_one_factor.cpp  modify_detect_zero_factor.cpp  modify_detect_zero_product.cpp  modify_flatten_factor.cpp  modify_flatten_product.cpp  modify_flatten_sum.cpp  modify_rebuild_factor_sum_into_sum_factors.cpp  modify_rebuild_prod_factors_into_factor_prod.cpp  modify_rebuild_prod_sum_into_sum_prod.cpp  modify_rebuild_sum_into_linear_combination.cpp  modify_remove_bridge_product.cpp  modify_remove_bridge_sum.cpp  modify_simplify_linear_combination.cpp  modify_sort_product_of_boson_primitive_operators_0.cpp  modify_sort_product_of_boson_primitive_operators_1.cpp  modify_sort_product_of_boson_primitive_operators_2.cpp  modify_substitute_cr_an_with_no.cpp  transform_canonical_math.cpp  transform_detect_bridge_product.cpp  transform_detect_bridge_sum.cpp  transform_detect_one_factor.cpp  transform_detect_zero_factor.cpp  transform_detect_zero_product.cpp  transform_expand.cpp  transform_factor_sum_to_sum_factors.cpp  transform_flatten_product.cpp  transform_flatten_sum.cpp  transform_prod_factors_to_factor_prod.cpp  transform_simplify_factor.cpp  transform_simplify_linear_combination.cpp  transform_simplify_product.cpp  transform_simplify_sum.cpp  transform_sort_product_of_boson_primitive_operators.cpp  transform_sort_product_of_boson_primitive_operators_0.cpp  transform_sort_product_of_boson_primitive_operators_1.cpp  (+3 more)
boson_algebra_example/src/: main.cpp
boson_algebra_tests/: CMakeLists.txt
boson_algebra_tests/include/boson_algebra_tests/: abcd.hpp  example_expressions.hpp
boson_algebra_tests/src/: abcd.cpp  expression_draining.cpp  test1.cpp  test_boson_primitive_operators.cpp  test_expression_boson_primitive_operators.cpp  test_expression_draining.cpp  test_expression_structural_blocks.cpp  test_modify_detect_zero_factor.cpp  test_modify_detect_zero_factor_old_api.cpp  test_modify_detect_zero_product.cpp  test_modify_detect_zero_product_old_api.cpp  test_modify_flatten_factor.cpp  test_modify_flatten_factor_old_api.cpp  test_modify_flatten_product.cpp  test_modify_flatten_product_old_api.cpp  test_modify_rebuild_factor_sum_into_sum_factors.cpp  test_modify_rebuild_factor_sum_into_sum_factors_old_api.cpp  test_modify_rebuild_prod_factors_into_factor_prod.cpp  test_modify_rebuild_prod_factors_into_factor_prod_old_api.cpp  test_modify_rebuild_prod_sum_into_sum_prod.cpp  test_modify_rebuild_prod_sum_into_sum_prod_old_api.cpp  test_modify_rebuild_sum_into_linear_combination.cpp  test_modify_rebuild_sum_into_linear_combination_old_api.cpp  test_modify_simplify_linear_combination.cpp  test_modify_simplify_linear_combination_old_api.cpp  test_modify_sort_product_of_boson_primitive_operators_0.cpp  test_modify_sort_product_of_boson_primitive_operators_0_old_api.cpp  test_modify_sort_product_of_boson_primitive_operators_1.cpp  test_modify_sort_product_of_boson_primitive_operators_1_old_api.cpp  test_modify_sort_product_of_boson_primitive_operators_2.cpp  test_modify_sort_product_of_boson_primitive_operators_2_old_api.cpp  test_modify_substitute_cr_an_with_no.cpp  test_transform_detect_zero_factor.cpp  test_transform_detect_zero_product.cpp  test_transform_expand.cpp  test_transform_factor_sum_to_sum_factors.cpp  test_transform_flatten_product.cpp  test_transform_prod_factors_to_factor_prod.cpp  test_transform_simplify_factor.cpp  test_transform_simplify_linear_combination.cpp  (+8 more)
cmake/: common.cmake
developer_tools/config/: README  keybindings.json
qbt/: CMakeLists.txt
qbt/src/: main.cpp
